<resources>
    <string name="app_name">Securitik</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="gps_network_not_enabled">Your GPS settings are not enabled</string>
    <string name="open_location_settings">Open</string>
    <string name="dismiss">Dismiss</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="confirm_pass">Confirm your password</string>
    <string name="hint_pass">Password</string>
    <string name="cb_alert">Alert my emergency contacts</string>
    <string name="no">No</string>
    <string name="yes">yes</string>
    <string name="done">Done</string>
    <string name="logo">Logo</string>
    <string name="title_activity_contacts">My Emergency Contacts</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="em_contacts">Emergency Contacts</string>
    <string name="add_contact">Add a new contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="list_is_empty">List is empty</string>
    <string name="_254">+254</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="account">Account</string>
    <string name="edit">Edit Profile</string>
    <string name="help">Help</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="title_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="str_register">Open an account?</string>
    <string name="title_register">Register</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_con_password">Confirm password</string>
    <string name="live">Live\na more secure life</string>
    <string name="connected">Stay connected\nto your loved ones</string>
    <string name="how_does_securitic_work">How does Securitic work?</string>
    <string name="why_securitik">Why Securitik?</string>
    <string name="em">How do you certain that the request is in deed an emergancy?</string>
</resources>
