<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="42dp">
        
        <TextView
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:text="@string/confirm_pass"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content">

        <EditText
            android:textSize="14sp"
            android:textColor="#000"
            android:padding="16dp"
            android:layout_gravity="center_horizontal"
            android:maxLines="1"
            android:singleLine="true"
            android:id="@+id/et_confirm_pass"
            android:maxLength="100"
            android:inputType="textPassword"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/hint_pass"
            android:layout_marginBottom="4dp"
            android:background="@android:drawable/editbox_background_normal"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:layout_gravity="center"
        android:text="@string/cb_alert"
        android:id="@+id/cb_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/btn_rippled"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:padding="8dp"
            android:id="@+id/btn_dismiss"
            android:text="@string/dismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
            android:textColor="#fff"
            android:textStyle="bold"/>

        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/btn_rippled"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:padding="8dp"
            android:id="@+id/btn_done"
            android:text="@string/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
            android:textColor="#fff"
            android:textStyle="bold"/>


    </LinearLayout>

</LinearLayout>