<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <TextView
            android:textColor="#e64e4545"
            android:textStyle="bold"
            android:id="@+id/title_login"
            android:layout_marginTop="16dp"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:text="@string/title_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center">

        <EditText
            android:id="@+id/et_reg_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/hint_user_name"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="14sp"
            tools:ignore="TextFields" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:gravity="start"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:drawable/editbox_background_normal"
                android:enabled="false"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/_254"
                android:textColor="#acacac"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/code"
            android:layout_toRightOf="@id/code">

            <EditText
                android:id="@+id/et_reg_ph"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:drawable/editbox_background_normal"
                android:hint="@string/hint_phone"
                android:inputType="number"
                android:maxLength="9"
                android:maxLines="1"
                android:padding="8dp"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center">

        <EditText
            android:id="@+id/et_reg_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="14sp"
            tools:ignore="TextFields" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:maxLength="100"
            android:textSize="14sp"
            android:textColor="#000"
            android:id="@+id/et_reg_pass_1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="8dp"
            android:hint="@string/hint_password"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:maxLength="100"
            android:textSize="14sp"
            android:textColor="#000"
            android:id="@+id/et_reg_pass_2"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="8dp"
            android:hint="@string/hint_con_password"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>


</LinearLayout>