<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="42dp">
        
        <TextView
            android:id="@+id/tv_add_title"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:text="@string/add_contact"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/hint_name"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="14sp"
            tools:ignore="TextFields" />

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:gravity="start"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:drawable/editbox_background_normal"
                android:enabled="false"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/_254"
                android:textColor="#acacac"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/code"
            android:layout_toRightOf="@id/code">

            <EditText
                android:id="@+id/et_ph"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:drawable/editbox_background_normal"
                android:hint="@string/hint_phone"
                android:inputType="number"
                android:maxLength="9"
                android:maxLines="1"
                android:padding="8dp"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="14sp"
            tools:ignore="TextFields" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/btn_rippled"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:padding="8dp"
            android:id="@+id/btn_dismiss"
            android:text="@string/dismiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
            android:textColor="#fff"
            android:textStyle="bold"/>

        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/btn_rippled"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:padding="8dp"
            android:id="@+id/btn_done"
            android:text="@string/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
            android:textColor="#fff"
            android:textStyle="bold"/>


    </LinearLayout>

</LinearLayout>